test/fails/bad_parsing/bad_tag1.lgl
void main() {
    tag int is vec2;
}
